webook/k8s-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webook-mysql
  template:
    metadata:
      name: webook-mysql
      labels:
        app: webook-mysql
    spec:
      containers:
        - name: webook-mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            #这要对应到mysql的存储位置
            - mountPath: /var/lib/mysql
              #pod里面那么多的volume用的是哪个
              name: mysql-storage
          ports:
            - containerPort: 3306
              protocol: TCP
      restartPolicy: Always
      #这个是整个POD有哪些volumes
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: webook-mysql-claim
