webook/k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-redis
spec:
  selector:
    app: webook-redis
  ports:
    - protocol: TCP
      port: 16379 #服务本身的 给k8s内部使用
      targetPort: 6379 #对应的pod的端口
      nodePort: 30003 #给k8s集群外面使用
  type: NodePort
