webook/k8s-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webook-ingress
spec:
  ingressClassName: nginx
  rules:
  # host: 当域名是webook.com时 命中我这条规则
    - host: webook.com
      http:
        paths:
        # 请求路径的前缀是 /时
        # 将流量转发到后面的webook服务上
        # 端口是 8080
          - backend:
              service:
                name: webook
                port:
                  number: 8080
            pathType: Prefix
            path: /
